@startuml
' Configurações visuais
skinparam classAttributeIconSize 0
skinparam classBackgroundColor White
skinparam classBorderColor Black
skinparam classArrowColor Black
skinparam linetype ortho

title Diagrama de Classes - Sistema de Estoque (MVC + Active Record)

' ==========================================
' INFRAESTRUTURA (Singleton)
' ==========================================
class Conexao {
    + {static} Conectar(): PDO
}

' ==========================================
' MODEL - SERVIÇOS
' ==========================================

class Relatorio {
    ' Classe de Serviço: Processa dados sem manter estado persistente
    + gerarTotalEstoque(id_usuario: int): Array
    + gerarHistoricoMovimentacoesPorData(...): Array
    + geraProdutosMaisVendidos(...): Array
}

' ==========================================
' MODEL - ENTIDADES DE NEGÓCIO
' ==========================================

abstract class Usuario {
    # id: int
    # nome: string
    # email: string
    # senha: string
    # tipo: Enum
    + {static} verificaLogin(email, senha): Array
    + logout(): void
    {abstract} + enderecoPaginaInicial(): string
}

class Administrador {
    + excluirUsuario(id: int): bool
    + listarUsuarios(idAdmin: int): List
}

class Cliente {
    - nomeEmpresa: string
    + getNomeEmpresa(): string
    + enderecoPaginaInicial(): string
}

class Produto {
    - id, sku, nome, descricao: ...
    - preco, quantidade, estoqueMinimo: ...
    - id_usuario, id_fornecedor, id_categoria: int
    + salvar(): int
    + listarPorUsuario(...): List
    + atualizarQuantidade(...): bool
    + buscarPorId(...): Produto
    + atualizar(...): bool
    + excluirProduto(...): bool
}

class Fornecedor {
    - id, nomeEmpresa, cnpj: ...
    - email, telefone, id_usuario: ...
    + salvar(): bool
    + listarFornecedores(...): List
    + buscarPorId(...): Fornecedor
    + atualizar(...): bool
    + excluirFornecedor(...): bool
}

class Categoria {
    - id, nome, id_usuario: ...
    + salvar(): bool
    + listarCategorias(...): List
    + buscarPorIdCategoria(...): Categoria
    + atualizar(...): bool
    + excluirCategoria(...): bool
}

class Movimentacao {
    - id, tipo, quantidade: ...
    - data, motivo: ...
    - id_produto, id_usuario: int
    + registrar(): bool
    + listarPorUsuario(...): List
}

' ==========================================
' RELACIONAMENTOS E DEPENDÊNCIAS
' ==========================================

' 1. Herança (É um...)
Usuario <|-- Administrador
Usuario <|-- Cliente

' 2. Dependência de Infraestrutura (Todos usam Conexao para operar no BD)
' Isso reflete o require_once 'Conexao.php' e Conexao::Conectar()
Usuario ..> Conexao
Relatorio ..> Conexao
Produto ..> Conexao
Fornecedor ..> Conexao
Categoria ..> Conexao
Movimentacao ..> Conexao

' 3. Associações de Negócio
Administrador "1" ..> "*" Cliente : gerencia >

' Composição/Agregação (Cliente é o dono dos dados - Multi Tenancy)
Cliente "1" -- "*" Produto : possui >
Cliente "1" -- "*" Fornecedor : possui >
Cliente "1" -- "*" Categoria : possui >
Cliente "1" -- "*" Movimentacao : registra >

' Relacionamentos entre tabelas (Foreign Keys no código)
Produto "*" --> "0..1" Fornecedor : fornecido por
Produto "*" --> "0..1" Categoria : categorizado em
Produto "1" *-- "*" Movimentacao : possui histórico de
@enduml